Added parsing tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,13 @@ set(LIBRARY_NAME "acalc-lib")
 
 project(acalc VERSION 0.1.0 DESCRIPTION "A simple CLI calculator" LANGUAGES CXX)
 
-enable_testing()
+if(WITH_TESTS)
+    message(STATUS "Enabled Tests")
+    enable_testing()
+else()
+    message(STATUS "Disabled Tests")
+endif()
+
 include(CheckIncludeFile)
 include(CheckIncludeFileCXX)
 include(InstallRequiredSystemLibraries)
@@ -83,6 +89,12 @@ add_library(${LIBRARY_NAME} STATIC ${SOURCES} ${HEADERS})
 add_executable(${PROJECT_NAME} src/main.cpp)
 target_link_libraries(${PROJECT_NAME} ${LIBRARY_NAME})
 
-add_executable(lexer-test tests/lexertest.cpp)
-target_link_libraries(lexer-test ${LIBRARY_NAME})
-add_test(lexer-test lexer-test)
+if(WITH_TESTS)
+    add_executable(lexer-test tests/lexertest.cpp)
+    target_link_libraries(lexer-test ${LIBRARY_NAME})
+    add_test(lexer-test lexer-test)
+
+    add_executable(parser-test tests/parsertest.cpp)
+    target_link_libraries(parser-test ${LIBRARY_NAME})
+    add_test(parser-test parser-test)
+endif()
